[gd_scene load_steps=14 format=3 uid="uid://b84gvs3sid06g"]

[ext_resource type="PackedScene" uid="uid://bv87orrgq5ha8" path="res://Cards/Spawns/Asset/asset.tscn" id="1_sfl5y"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/storm.gd" id="2_3li1v"]
[ext_resource type="Texture2D" uid="uid://cpxuamnifmi81" path="res://Cards/Spawns/Asset/Images/cloud.png" id="2_4s40m"]
[ext_resource type="AudioStream" uid="uid://8a6wjl30mm38" path="res://Audio/lightning.wav" id="3_3v1cc"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/Lightning.gd" id="3_lqkis"]
[ext_resource type="Texture2D" uid="uid://b58xvrepo8v8a" path="res://Cards/Spawns/Asset/Images/lightning.png" id="3_qocb3"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_w05wf"]
a = Vector2(9, -62)

[sub_resource type="Animation" id="Animation_j5j1h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cxro5"]
resource_name = "backwards"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_7mr0s"]
resource_name = "storm"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yms5a"]
_data = {
"RESET": SubResource("Animation_j5j1h"),
"backwards": SubResource("Animation_cxro5"),
"storm": SubResource("Animation_7mr0s")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l1gu7"]
radius = 60.0
height = 212.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k7rdi"]
radius = 923.955

[node name="Storm" instance=ExtResource("1_sfl5y")]
collision_layer = 0
collision_mask = 4
sync_to_physics = false
script = ExtResource("2_3li1v")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="0"]
position = Vector2(4, -42)
scale = Vector2(0.5, 0.5)
stream = ExtResource("3_3v1cc")
volume_db = -1.0
max_distance = 1000.0
attenuation = 2.0
bus = &"TableSounds"

[node name="LightningSpawn" type="Node2D" parent="." index="1"]
position = Vector2(6, -42)

[node name="Lightning" type="AnimatableBody2D" parent="." index="2"]
visible = false
position = Vector2(4, -42)
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 16
script = ExtResource("3_lqkis")
damage = 25.0
maxAge = 0.3

[node name="Sprite2D" type="Sprite2D" parent="Lightning" index="0"]
texture = ExtResource("3_qocb3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lightning" index="1"]
position = Vector2(-3, 21)
shape = SubResource("SegmentShape2D_w05wf")

[node name="Sprite2D" parent="." index="3"]
scale = Vector2(5, 5)
texture = ExtResource("2_4s40m")
hframes = 5
vframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_yms5a")
}

[node name="CollisionShape2D" parent="." index="4"]
position = Vector2(4, 135)
shape = SubResource("CapsuleShape2D_l1gu7")

[node name="HomingRadius" type="Area2D" parent="." index="5"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomingRadius" index="0"]
position = Vector2(2, -3)
shape = SubResource("CircleShape2D_k7rdi")

[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HomingRadius" to="." method="_on_homing_radius_area_entered"]
[connection signal="area_exited" from="HomingRadius" to="." method="_on_homing_radius_area_exited"]
